fix(carousel): hide slide number on mobile view

--- a/my-react-app/src/styles/_carousel.scss
+++ b/my-react-app/src/styles/_carousel.scss
@@ -35,19 +35,22 @@
   }
 
   #carousel-current {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    color: white;
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
-    transform: translate(-50%);
-    backdrop-filter: brightness(50%);
-    min-width: 50px;
-    padding-block: 4px;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
+    display: none;
+    @media screen and (min-width: 1025px) {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 500;
+      font-size: 18px;
+      color: white;
+      position: absolute;
+      bottom: 25px;
+      left: 50%;
+      transform: translate(-50%);
+      backdrop-filter: brightness(50%);
+      min-width: 50px;
+      padding-block: 4px;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+    }
   }
 }
